--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "moovin-mobile",
     "slug": "moovin-mobile",
+    "scheme": "br.com.specterlabs.moovin",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -9,7 +10,7 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#522BCF"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -18,9 +19,11 @@
       "**/*"
     ],
     "ios": {
+      "bundleIdentifier": "br.com.specterlabs.moovin",
       "supportsTablet": true
     },
     "android": {
+      "package": "br.com.specterlabs.moovin",
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
