--- a/package.json
+++ b/package.json
@@ -9,23 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.2.2",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/native": "^6.1.2",
     "@react-navigation/native-stack": "^6.9.8",
     "@types/styled-components-react-native": "^5.2.1",
+    "axios": "^1.3.3",
     "expo": "~47.0.12",
+    "expo-font": "~11.0.1",
+    "expo-linking": "^3.3.0",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "^12.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-dotenv": "^3.4.7",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
+    "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.9",
     "styled-components": "^5.3.6"
+  },
+  "resolutions": {
+    "react-native-svg": "13.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
