--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/styled-components-react-native": "^5.2.1",
     "axios": "^1.3.3",
     "expo": "~47.0.12",
+    "expo-blur": "^12.0.1",
     "expo-font": "~11.0.1",
     "expo-linking": "^3.3.0",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "^12.0.0",
+    "lottie-react-native": "^5.1.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
