--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@types/styled-components-react-native": "^5.2.1",
     "axios": "^1.3.3",
+    "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-blur": "^12.0.1",
     "expo-font": "~11.0.1",
@@ -23,10 +24,13 @@
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "^12.0.0",
     "lottie-react-native": "^5.1.5",
+    "pusher-js": "^8.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
+    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
