--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
     "expo-blur": "^12.0.1",
+    "expo-device": "^5.2.1",
     "expo-document-picker": "^11.2.1",
     "expo-file-system": "^15.2.2",
     "expo-font": "~11.0.1",
     "expo-linking": "^3.3.0",
+    "expo-notifications": "^0.18.1",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "^12.0.0",
     "lottie-react-native": "5.1.4",
