--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "expo": "~47.0.12",
-    "expo-blur": "^12.0.1",
-    "expo-device": "^5.2.1",
-    "expo-document-picker": "^11.2.1",
-    "expo-file-system": "^15.2.2",
+    "expo-blur": "~12.0.1",
+    "expo-device": "~5.0.0",
+    "expo-document-picker": "~11.0.1",
     "expo-font": "~11.0.1",
     "expo-linking": "^3.3.0",
-    "expo-notifications": "^0.18.1",
+    "expo-notifications": "~0.17.0",
     "expo-status-bar": "~1.4.2",
-    "expo-web-browser": "^12.0.0",
+    "expo-web-browser": "~12.0.0",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "pusher-js": "7.4.0",
