--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-notifications": "~0.17.0",
     "expo-status-bar": "~1.4.2",
     "expo-web-browser": "~12.0.0",
+    "intl": "^1.2.5",
     "lottie-react-native": "5.1.4",
     "moment": "^2.29.4",
     "pusher-js": "7.4.0",
@@ -35,7 +36,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-dotenv": "^3.4.7",
-    "react-native-dropdown-picker": "^5.4.4",
+    "react-native-dropdown-picker": "5.4.7-beta.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
